--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.23)
 project(Gravity LANGUAGES CXX CUDA)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
 
 if (NOT CMAKE_BUILD_TYPE)
@@ -16,6 +16,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(CUDA)
 find_package(Eigen3 3.3 REQUIRED NO_MODULES)
 
-add_executable(Gravity main.cpp Model/World.cu Model/World.cuh View/Renderer.cpp View/Renderer.h Utility/Vec3.cpp Utility/Vec3.h Model/Entity.cpp Model/Entity.h Generator/BaseGenerator.h Generator/TestingGenerator.h Generator/SolarSystem.h)
-include_directories(. /opt/cuda/include/)
+add_executable(Gravity main.cpp Model/World.cu View/Renderer.cpp Utility/Vec3.cpp Model/Entity.cpp)
+include_directories(. Model View Utility Generator)
 target_link_libraries(Gravity Eigen3::Eigen)
